--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,3 +9,6 @@ html
 
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js')
   script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js')
+  script(src='./js/radiovalues.js')
+  script(src='./js/getTheData.js')
+  script(src='./js/getQuizAnswers.js')
