--- a/public/css/pug-layout.css
+++ b/public/css/pug-layout.css
@@ -13,7 +13,7 @@ h1.pageTitle{text-align:center;}
 
 .categoryHeading{text-align:center;margin-bottom:30px;margin-top:50px;color:#212529;}
 #indexHeadingWhite{text-align:center;margin-bottom:30px;margin-top:50px;color:#ffffff;}
-#indexHeadingGrey{text-align:center;margin-bottom:20px;margin-top:20px;color:#212529;}
+#indexHeadingGrey{text-align:center;margin-bottom:20px;margin-top:20px;padding-top:15px;color:#212529;}
 
 /* INDEX PAGE TOP BOX*/
 #indexInfo{width:100%;background-color:grey;position:static;}
@@ -83,6 +83,15 @@ h1.pageTitle{text-align:center;}
 .titleListOrange{background-color:#ffccb3 !important;}
 .titleListRed{background-color:#ffb3b3 !important;}
 .titleListDarkRed{background-color:#ff3333 !important;}
+
+#mainDiv{width:1140px;height:1000px;background-color:red;}
+#titleBlogDiv{width:100%; height:225px;background-color:white;border:2px solid black;}
+#blogTitle{justify-content:center;display:flex;padding: 1rem;}
+#authorDiv{justify-content:left;width:500px;height:75px;display:flex;margin:0 auto;}
+.authorText{font-size:16px;margin-left:15px;}
+.authorIcon{width:48px;height:48px;border-radius:50%;margin-top:5px;}
+#mainContentDiv{height:775px; width:100%;background-color:blue;}
+
 
 /* 
 
