--- a/views/security-test-14.pug
+++ b/views/security-test-14.pug
@@ -7,7 +7,7 @@ block content
 				div#captionBoxDiv
 					img(class='quizImgQ1', src="awareness-promotion-600px.jpg", alt="Image of communication methods in cyber security awareness.")
 					h3.textLeft.questionHeading 14:
-						h4.questionHeading Which of the following methods has security awareness been promoted to you?
+						h4.questionHeading How many of the following methods has security awareness been promoted to you with?
 						form(role='form',id='myForm',action="/security-test",method="post")
 							ul.listQuestion
 								li.multiQuestionList (A) E-mail
@@ -15,25 +15,20 @@ block content
 								li.multiQuestionList (C) Monthly meetings
 								li.multiQuestionList (D) Leaflets/Flyers
 								li.multiQuestionList (E) Posters
-								li.multiQuestionList (F) Other
-								li.multiQuestionList (G) Awareness has not been promoted
 							div.radioDiv(style="display:inline-block;margin-top:10px;margin-bottom:10px;")
-								input(type='radio', id='email', name='selection', value='Email')
-								label.lblSpacing(for='email') (A)
-								input(type='radio', id='occasional-meetings', name='selection', value='Occasional meetings')
-								label.lblSpacing(for='occasional-meetings') (B)
-								input(type='radio', id='monthly-meetings', name='selection', value='Monthly meetings')
-								label.lblSpacing(for='monthly-meetings') (C)
-								input(type='radio', id='leaflets-flyers', name='selection', value='Leaflets and flyers')
-								label.lblSpacing(for='leaflets-flyers') (D)
-								input(type='radio', id='posters', name='selection', value='Posters')
-								label.lblSpacing(for='posters') (E)
-								input(type='radio', id='other', name='selection', value='Other')
-								label.lblSpacing(for='other') (F)
-								input(type='radio', id='not-promoted', name='selection', value='Awareness has not been promoted')
-								label.lblSpacing(for='not-promoted') (G)
+								input(type='radio', id='all-of-the-above', name='selection', value='All of the above')
+								label.lblSpacing(for='all-of-the-above') All of the above
+								input(type='radio', id='many-of-the-above', name='selection', value='Many of the above')
+								label.lblSpacing(for='many-of-the-above') Many of the above
+								input(type='radio', id='most-of-the-above', name='selection', value='Most of the above')
+								label.lblSpacing(for='most-of-the-above') Most of the above
+								input(type='radio', id='some-of-the-above', name='selection', value='Some of the aboves')
+								label.lblSpacing(for='some-of-the-above') Some of the above
+								input(type='radio', id='none-of-the-above', name='selection', value='None of the above')
+								label.lblSpacing(for='none-of-the-above') None of the above
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext16(type='button') Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 							style(type="text/css").
 								body {background-color:#87CEFA;}
