--- a/views/security-test-6.pug
+++ b/views/security-test-6.pug
@@ -5,7 +5,7 @@ block content
 		div#indexCenterDiv
 			div#quizDiv
 				div#captionBoxDiv
-					img(class='quizImgQ1', src="make-a-note.jpg")
+					img(class='quizImgQ1', src="how-many-passwords-600px.jpg")
 					h3.textLeft.questionHeading Q6:
 						h4.questionHeading How many passwords do you use?
 						form(role='form',id='myForm',action="/security-test",method="post")
@@ -23,5 +23,6 @@ block content
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext7(type='button') Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 								style(type="text/css").
-									body {background-color:grey;}
+									body {background-color:#87CEFA;}
