--- a/views/security-test-8.pug
+++ b/views/security-test-8.pug
@@ -5,7 +5,7 @@ block content
 		div#indexCenterDiv
 			div#quizDiv(style="height: 770px !important;")
 				div#captionBoxDiv
-					img(class='quizImgQ1', src="make-a-note.jpg")
+					img(class='quizImgQ1', src="security-advice-600px.jpg")
 					h3.textLeft.questionHeading Q8:
 						h4.questionHeading What is the correct advice for secure passwords?
 						form(role='form',id='myForm',action="/security-test",method="post")
@@ -26,5 +26,6 @@ block content
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext9(type='button') Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 							style(type="text/css").
-								body {background-color:grey;}
+								body {background-color:#87CEFA;}
