--- a/views/security-test.pug
+++ b/views/security-test.pug
@@ -23,5 +23,6 @@ block content
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext1(type='button') Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 								style(type="text/css").
-									body {background-color:grey;}
+									body {background-color:#87CEFA;}
