--- a/views/security-test-10.pug
+++ b/views/security-test-10.pug
@@ -5,9 +5,9 @@ block content
 		div#indexCenterDiv
 			div#quizDiv
 				div#captionBoxDiv
-					img(class='quizImgQ1', src="make-a-note.jpg")
+					img(class='quizImgQ1', src="duplicate-600px.jpg")
 					h3.textLeft.questionHeading Q10:
-						h4.questionHeading Do you allow the use of duplicate passwords?
+						h4.questionHeading Does your company allow the usage of duplicate passwords?
 						form(role='form',id='myForm',action="/security-test",method="post")
 							div.radioDiv#normalRadioGroup(style="margin-left:50px;")
 								input(type='radio', id='not-at-all', name='selection', value='Not at all')
@@ -20,6 +20,7 @@ block content
 								label.lblSpacing(for='no-policy') No policy on duplicate passwords
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
-								button.btn.btn-success#btnNext11(type='button',href="http://localhost:9000/results") Next
+								button.btn.btn-success#btnNext11(type='button') Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 								style(type="text/css").
-									body {background-color:grey;}
+									body {background-color:#87CEFA;}
