--- a/views/security-test-12.pug
+++ b/views/security-test-12.pug
@@ -23,5 +23,6 @@ block content
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext14(type='button') Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 								style(type="text/css").
 									body {background-color:#87CEFA;}
