--- a/views/security-test-2.pug
+++ b/views/security-test-2.pug
@@ -23,6 +23,7 @@ block content
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext2(type='button',href="http://localhost:9000/security-test3") Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 							style(type="text/css").
-									body {background-color:grey;}
+									body {background-color:#87CEFA;}
 								
