--- a/views/security-test-3.pug
+++ b/views/security-test-3.pug
@@ -9,7 +9,7 @@ block content
 					h3.textLeft.questionHeading Q3:
 						h4.questionHeading How well do you know the security policy?
 						form(role='form',id='myForm',action="/security-test",method="post")
-							div.radioDiv#normalRadioGroup(style="margin-left:100px;")
+							div.radioDiv#normalRadioGroup
 								input(type='radio', id='very-well', name='selection', value='Very well')
 								label.lblSpacing(for='very-well') Very well
 								input(type='radio', id='well', name='selection', value='Well')
@@ -23,6 +23,7 @@ block content
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext3(type='button',href="http://localhost:9000/security-test4") Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 							style(type="text/css").
-									body {background-color:grey;}
+									body {background-color:#87CEFA;}
 								
