--- a/views/security-test-4.pug
+++ b/views/security-test-4.pug
@@ -9,8 +9,8 @@ block content
 					h3.textLeft.questionHeading Q4:
 						h4.questionHeading How many of the following guidelines does your policy cover?
 						form(role='form',id='myForm',action="/security-test",method="post")
-							ul
-								li.multiQuestionList Email usage guidlines
+							ul.listQuestion
+								li.multiQuestionList Email usage guidelines
 								li.multiQuestionList Unknown devices
 								li.multiQuestionList Use of company-owned devices
 								li.multiQuestionList Use of personal devices
@@ -28,6 +28,7 @@ block content
 							div.formButtons
 								button.btn.btn-success#btnSubmit1(type='submit') Submit
 								button.btn.btn-success#btnNext4(type='button',href="http://localhost:9000/security-test5") Next
+								button.btn.btn-success.homeButton#btnHome(type='button') Home
 								style(type="text/css").
-									body {background-color:grey;}
+									body {background-color:#87CEFA;}
 								
