--- a/public/css/pug-layout.css
+++ b/public/css/pug-layout.css
@@ -1,4 +1,4 @@
-body{height:100vh;margin:0px;}
+body{height:100vh;margin:0px;background-size:cover;}
 html{min-height:100%;min-width:100%;}
 p{font-size:18px;}
 h1.pageTitle{text-align:center;}
@@ -9,18 +9,21 @@ h1.pageTitle{text-align:center;}
 .centerAlign{text-align:center;}
 .centerAlignMargin{padding-bottom:20px;margin-top:20px;text-align:center;}
          
-		 /* INDEX PAGE START */
+/* INDEX PAGE START */
 
 .categoryHeading{text-align:center;margin-bottom:30px;margin-top:50px;color:#212529;}
 #indexHeadingWhite{text-align:center;margin-bottom:30px;margin-top:50px;color:#ffffff;}
-#indexHeadingGrey{text-align:center;margin-bottom:20px;margin-top:20px;padding-top:15px;color:#212529;}
+#indexHeadingGrey{text-align:center;margin-bottom:20px;margin-top:20px;padding-top:15px;color:#212529;font-weight:700;}
 
 /* INDEX PAGE TOP BOX*/
-#indexInfo{width:100%;background-color:grey;position:static;}
+#indexInfo{width:100%;background-color:#87CEFA;position:static;}
 .anchorItGov{color:#0000b3;}
 .imgWhiteGlobe{height:400px;background-color:black;width:300px;margin-right:10px;margin-bottom:10px;border:1px solid #000000;display:block; margin:0 auto;}
-#paraPerspective{font-size:20px;}
-#paraMeasures{font-size:20px;}
+#paraPerspective{font-size:20px;font-weight:500;}
+#paraMeasures{font-size:20px;font-weight:500;}
+.captionHeading{font-weight:700;}
+.normalColour{color:#D9D9D9;}
+a.normalColour:hover{color:#7d7a7a;text-decoration:none;}
 /* INDEX PAGE TOP BOX*/
 
 .categoryIcon{height:128px;background-color:black;width:128px;margin-right:10px;margin-bottom:25px;border:1px solid #000000}
@@ -30,53 +33,55 @@ h1.pageTitle{text-align:center;}
 .img-btm-right{height:400px;background-color:black;width:500px;margin-left:10px;margin-bottom:25px;border:1px solid #000000;}
 
 
-#indexCenterDiv{text-align:center; background-color:grey;margin-bottom:10px;}
+#indexCenterDiv{text-align:center; background-color:#87CEFA;margin-bottom:10px;}
 #captionBoxDiv{display:inline-block;position:relative;}
 #btnGetData{text-align:center;width:30%;justify-content: center;display: flex;margin: 0 auto;margin-bottom:30px;}
-#btnStart{text-align:center;width:30%;justify-content: center;display: flex;margin: 0 auto;margin-bottom:30px;}
+#btnStart{text-align:center;width:30%;justify-content: center;display: flex;margin: 0 auto;margin-bottom:15px;margin-top:15px;padding:0.75rem;font-weight:600;}
 #imageCaption{ position: absolute;bottom: 25px;right: 10px;left:0px;background-color: rgba(0, 0, 0, 0.9);color: #d9d9d9;padding-left: 20px;padding-right: 20px;}
 #imageCaption4{ position: absolute;bottom: 10px;right: 10px;left:0px;background-color: rgba(0, 0, 0, 0.9);color: #d9d9d9;padding-left: 20px;padding-right: 20px;}
 #imageCaption2{ position: absolute;bottom: 25px;right: 0px;left:10px;background-color: rgba(0, 0, 0, 0.9);color: #d9d9d9;padding-left: 20px;padding-right: 20px;}
 #imageCaption3{ position: absolute;bottom: 10px;right: 0px;left:10px;background-color: rgba(0, 0, 0, 0.9);color: #d9d9d9;padding-left: 20px;padding-right: 20px;}
 
 #indexFooter{background-image: url("../footer-bg.png");}
-.footerHeading{color:#666666;font-weight:bold;text-align:center;}
-#footerColumnLeft{width:32%;display:inline-block;color:#8c8c8c;}
+.footerHeading{color:#3bb7e8;font-weight:bold;text-align:center;}
+#footerColumnLeft{width:32%;display:inline-block;color:#3bb7e8;}
 .v1{display:inline-block; border-left: 1px solid grey;height:300px;position:absolute;margin-right:5px;}
-#footerColumnMiddle{width:32%;display:inline-block;margin-left:10px;color:#8c8c8c;}
-#footerColumnRight{width:32%;display:inline-block;margin-left:10px;color:#8c8c8c;}
-.copyFooter{color:#ffffff; float:right; display:contents;}
+#footerColumnMiddle{width:32%;display:inline-block;margin-left:10px;color:#3bb7e8;}
+#footerColumnRight{width:32%;display:inline-block;margin-left:10px;color:#3bb7e8;}
+.copyFooter{color:#3bb7e8; float:right; display:contents;font-weight:600;}
 .lockdownItalic{font-weight:790;}
 .lockdownStrong{margin-top:5px;}
-.smallerFont{font-size:16px;}
+.smallerFont{font-size:16px;font-weight:600;}
 .emptySpace{margin-bottom:30px;}
 
 		/* INDEX PAGE END */
 		
 #normalRadioGroup{margin-top:45px;}
-#quizDiv{width:1110px; background-color:#000000; height:700px; }
-.quizImgQ1{height:400px;background-color:black;width:700px;margin-right:10px;margin-left:10px;margin-bottom:10px;border:1px solid #000000;margin-top:20px;}
+#quizDiv{width:100%; background-color:#023352; height:700px;display:inline-table;}
+.quizImgQ1{height:400px;background-color:black;width:600px;margin-right:10px;margin-left:10px;margin-bottom:10px;border:1px solid #000000;margin-top:20px;}
 .textLeft{text-align:left;width:20%;}
-.questionHeading{color:#ffffff;}
+.questionHeading{color:#ffffff;font-size:26px;}
+.listQuestion{font-size:19px;} 
 .multiQuestionList{color:#ffffff;text-align:left;}
-.radioDiv{display:block;text-align:left;}
-.lblSpacing{margin-right:10px;color:#ffffff;margin-left:3px;}
+.radioDiv{display:block;}
+.lblSpacing{margin-right:10px;color:#ffffff;margin-left:3px;font-weight:600;font-size:19px;}
 .formButtons{margin-top:10px;}
 
 /*#q1Feedback{}*/
 .feedbackTile{display:inline-block;margin-left:40px;margin-right:30px;}
+.feedbackTitle{text-align:center;margin-bottom:20px;padding:1rem;color:#212529;font-weight:700;}
 
-#getNoteTitle{text-align:center;}
-#getTitleData{display:inline-block;float:left;padding:1rem;}
-#getMessageData{display:inline-block;margin-left:30px;padding:1rem;}
-#getIdData{display:inline-block;float:left;padding:1rem;}
-#btnGetAnswer{margin-bottom:10px;margin:auto auto 10px auto; display:block;}
-#displayData{background-color:grey;overflow: hidden;border: 1px solid black;margin-bottom:50px;display:none;padding-top:2rem; padding-right:1rem;}
-#titleList,#messageList{list-style-type: none;background-color:white;border:1px solid #000000 !important;padding: 1rem;min-height:150px;max-height:150px;}
+#btnGetAnswer{margin-bottom:10px;margin:auto auto 10px auto; display:block;width:25%;}
+#firstSetFeedback{margin-bottom:25px;}
+#secondSetFeedback{margin-bottom:25px;}
+#displayData{background-color:#87CEFA;overflow: hidden;border: 1px solid black;margin-bottom:50px;display:none;padding-top:2rem; padding-right:1rem;}
+#titleList,#messageList{list-style-type: none;border:1px solid #000000 !important;padding: 1rem;min-height:150px;max-height:150px;overflow:auto;font-size:18px;font-weight:600;}
 #messageList{max-width:500px;overflow:scroll;}
 #btnSubmit1{margin-right:10px;}
 
-.sectGet{padding-bottom:10px;background-color:grey;}
+.sectGet{padding-bottom:10px;background-color:#87CEFA;}
+.btnResult{margin:20px auto 20px auto;display:block;width:30%}
+.homeButton{width:10%; margin:20px 20px 20px auto;display:block;}
 
 .titleListGreen{background-color:#b3ffb3 !important;}
 .titleListYellow{background-color:#ffffb3 !important;}
@@ -84,13 +89,25 @@ h1.pageTitle{text-align:center;}
 .titleListRed{background-color:#ffb3b3 !important;}
 .titleListDarkRed{background-color:#ff3333 !important;}
 
+/* BLOG PAGE START*/
 #mainDiv{width:1140px;height:1000px;background-color:red;}
-#titleBlogDiv{width:100%; height:225px;background-color:white;border:2px solid black;}
-#blogTitle{justify-content:center;display:flex;padding: 1rem;}
+#titleBlogDiv{width:100%; height:225px;background-color:white;}
+#blogTitle{justify-content:center;display:flex;padding: 1rem;padding-top:30px;}
 #authorDiv{justify-content:left;width:500px;height:75px;display:flex;margin:0 auto;}
 .authorText{font-size:16px;margin-left:15px;}
 .authorIcon{width:48px;height:48px;border-radius:50%;margin-top:5px;}
-#mainContentDiv{height:775px; width:100%;background-color:blue;}
+#mainContentDiv{width:100%;background-color:white;justify-content:center;}
+.mainBlogText{font-size:21px;margin-left:315px;margin-right:200px;margin-top:50px;font-family:sans-serif;margin-bottom:0px;}
+#finalText{font-size:21px;margin-left:315px;margin-right:200px;text-align:center;padding-bottom:50px;margin-top:20px;font-weight:700;}
+a.blackLink{color:#212529;}
+a.blackLink:hover{color:#7d7a7a;text-decoration:none;}
+.refTitle{justify-content:center;display:flex;padding: 1rem;}
+.reference{font-weight:600;justify-content:center;display:flex;margin-bottom:50px;}
+#referenceDiv{height:250px;}
+/* BLOG PAGE END*/
+
+
+
 
 
 /* 
